--- a/wp-tutorial/src/app/article/article.page.html
+++ b/wp-tutorial/src/app/article/article.page.html
@@ -8,12 +8,22 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-card *ngIf="!post.ID">
+    <ion-card-header>
+      <ion-card-subtitle>
+        <ion-skeleton-text animated="true"></ion-skeleton-text>
+      </ion-card-subtitle>
+      <ion-card-title>
+        <ion-skeleton-text animated="true"></ion-skeleton-text>
+      </ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <ion-card *ngIf="post.ID">
     <ion-card-header>
       <ion-card-subtitle>
           {{post.date | date: "yyyy年MM月dd日"}}
-        </ion-card-subtitle>
-        <ion-card-title>{{post.title}}</ion-card-title>
+      </ion-card-subtitle>
+      <ion-card-title>{{post.title}}</ion-card-title>
     </ion-card-header>
   </ion-card>
   <div class="ion-padding" [innerHTML]="post.content"></div>
