--- a/chat-tutorial/src/app/tab2/tab2.page.html
+++ b/chat-tutorial/src/app/tab2/tab2.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item routerLink="/auth/signin" routerDirection="root">
+    <ion-item (click)="signOut()" button=true>
       <ion-label>ログアウト</ion-label>
     </ion-item>
   </ion-list>
